--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -8,5 +8,9 @@
       <span class="badge">{{hero.id}}</span>
       <span class="name">{{hero.name}}</span>
     </button>
+    <li *ngFor="let hero of heroes">
+      <button type="button" (click)="onSelect(hero)">
+      <!-- ... -->
+    <li *ngFor="let hero of heroes"></li>
   </li>
 </ul>
